Fixes wordwrap issue with email

--- a/clear-comp/css/styles.css
+++ b/clear-comp/css/styles.css
@@ -19,7 +19,7 @@
 .contact-info{
     font-size:1.5rem;
     color: var(--light-blue);
-    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 #mainNav {
